--- a/fig/example-sbp.tex
+++ b/fig/example-sbp.tex
@@ -1,3 +1,7 @@
 
 total order $ 1 \prec 2 \prec 3 \prec 4 \prec 5 \prec 6 \prec 7 \prec 8 \prec 9 \prec 10 \prec 11 \prec 12$\\
-permutation : $g_1$: (2 3)(5 6)(8 9)(11 12)(-2 -3)(-5 -6)(-8 -9)(-11 -12)
+permutation : $g_1$: (2 3)(5 6)(8 9)(11 12)(-2 -3)(-5 -6)(-8 -9)(-11 -12)  
+
+2 <= 3 \\
+2 == 3 -> 3 <= 2
+2 == 3 \land 3 == 2 -> 5 <= 6
