--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{pifont}
 \usepackage{amsmath,amssymb}
 \usepackage{amsthm}
+\usepackage{mathtools}
 \usepackage{float}
 \usepackage{dsfont}
 \usepackage{enumitem}
